Replace deprecated Thread#getId() with threadId()
Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>